--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/eslint/bin/eslint.js index.js"
+  },
+  "engines": {
+    "node": "7.0.0"
   },
   "repository": {
     "type": "git",
@@ -15,5 +18,12 @@
   "bugs": {
     "url": "https://github.com/hybrisCole/lambdamail/issues"
   },
-  "homepage": "https://github.com/hybrisCole/lambdamail#readme"
+  "homepage": "https://github.com/hybrisCole/lambdamail#readme",
+  "dependencies": {
+
+  },
+  "devDependencies": {
+    "eslint": "3.9.1",
+    "eslint-plugin-node": "2.1.3"
+  }
 }
